--- a/css/main.scss
+++ b/css/main.scss
@@ -2,11 +2,11 @@
 
 $main: #675aff;
 $second: #4838ff;
+$duration: 0.4s;
 // $three: #e357ef;
 // $main-dark: #101928;
 // $second-dark: #152744;
 // $white-50: rgba(255, 255, 255, .5);
-// $duration: 0.4s;
 
 /* End Variables */
 /* Start Global Rules */
@@ -77,10 +77,22 @@ body {
 	.settings {
 		display: flex;
 		justify-content: space-evenly;
+		align-items: center;
 	}
 
 	.settings .symbol svg {
 		font-size: 30px;
+		cursor: pointer;
+		color: $main;
+		transition: $duration;
+
+		&:hover {
+			color: $second;
+		}
+	}
+
+	select {
+		width: 75px;
 	}
 
 	.rate {
@@ -88,6 +100,10 @@ body {
 		display: flex;
 		justify-content: center;
 		gap: 20px;
+
+		div span:last-of-type {
+			font-weight: bold;
+		}
 	}
 
 	button {
@@ -100,7 +116,7 @@ body {
 		width: 100%;
 		cursor: pointer;
 		user-select: none;
-		transition: 0.3s;
+		transition: $duration;
 	}
 
 	button:hover {
