--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 /* End Variables */
 /* Start Global Rules */
 body {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Poppins", sans-serif;
   background-color: #675aff;
 }
 
@@ -21,7 +21,7 @@ body {
 /* End Footer Section */
 /* Start Converter */
 .converter {
-  width: 400px;
+  width: 450px;
   margin: auto;
   position: relative;
   background-color: white;
@@ -44,11 +44,13 @@ body {
 }
 .converter input {
   display: block;
-  border: 1px solid #777;
+  border: 1px solid black;
   background-color: white;
   padding: 10px 20px;
   width: 100%;
+  border-radius: 5px;
   margin-bottom: 50px;
+  transition: 0.4s;
 }
 .converter input:focus {
   border-color: #675aff;
@@ -63,6 +65,7 @@ body {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+  flex: 1;
 }
 .converter .settings .from {
   transition: 0.4s !important;
@@ -71,6 +74,28 @@ body {
 .converter .settings .to {
   transition: 0.4s !important;
   order: 3;
+}
+.converter .settings .drop {
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.4s;
+}
+.converter .settings .drop:focus-within {
+  border-color: #675aff;
+}
+.converter .settings .drop select {
+  cursor: pointer;
+  border: none;
+  text-align: center;
+}
+.converter .settings .drop select:focus-visible {
+  border: none;
+  outline: none;
 }
 .converter .settings .symbol {
   order: 2;
@@ -85,7 +110,7 @@ body {
   color: #4838ff;
 }
 .converter select {
-  width: 75px;
+  flex: 1;
 }
 .converter .rate {
   margin-top: 15px;
@@ -95,6 +120,17 @@ body {
 }
 .converter .rate div span:last-of-type {
   font-weight: bold;
+}
+.converter .rate .from {
+  transition: 0.4s !important;
+  order: 1;
+}
+.converter .rate .equal {
+  order: 2;
+}
+.converter .rate .to {
+  transition: 0.4s !important;
+  order: 3;
 }
 .converter button {
   background-color: #675aff;
@@ -122,4 +158,28 @@ body {
   text-align: center;
 }
 
+.animate-right {
+  animation: reorderAnimationRight 0.7s ease-in-out reverse;
+}
+
+.animate-left {
+  animation: reorderAnimationLeft 0.7s ease-in-out reverse;
+}
+
+@keyframes reorderAnimationRight {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(60px);
+  }
+}
+@keyframes reorderAnimationLeft {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-60px);
+  }
+}
 /* End Converter *//*# sourceMappingURL=main.css.map */
