--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,7 @@ $duration: 0.4s;
 /* End Variables */
 /* Start Global Rules */
 body {
-	font-family: "Ubuntu", sans-serif;
+	font-family: 'Poppins', sans-serif;
 	background-color: $main;
 }
 
@@ -36,7 +36,7 @@ body {
 /* Start Converter */
 
 .converter {
-	width: 400px;
+	width: 450px;
 	margin: auto;
 	position: relative;
 	background-color: white;
@@ -62,11 +62,13 @@ body {
 
 	input {
 		display: block;
-		border: 1px solid #777;
+		border: 1px solid black;
 		background-color: white;
 		padding: 10px 20px;
 		width: 100%;
+		border-radius: 5px;
 		margin-bottom: 50px;
+		transition: $duration;
 	}
 
 	input:focus {
@@ -81,6 +83,7 @@ body {
 
 		&>div {
 			user-select: none;
+			flex: 1;
 		}
 
 		.from {
@@ -92,6 +95,33 @@ body {
 			transition: $duration !important;
 			order: 3;
 		}
+
+		.drop {
+			border: 1px solid black;
+			border-radius: 5px;
+			padding: 5px 10px;
+			display: flex;
+			justify-content: space-evenly;
+			align-items: center;
+			cursor: pointer;
+			transition: $duration;
+
+			&:focus-within {
+				border-color: $main;
+			}
+
+			select {
+				cursor: pointer;
+				border: none;
+				text-align: center;
+
+				&:focus-visible {
+					border: none;
+					outline: none;
+				}
+			}
+		}
+
 
 		.symbol {
 
@@ -112,7 +142,7 @@ body {
 
 
 	select {
-		width: 75px;
+		flex: 1;
 	}
 
 	.rate {
@@ -123,6 +153,20 @@ body {
 
 		div span:last-of-type {
 			font-weight: bold;
+		}
+
+		.from {
+			transition: $duration !important;
+			order: 1;
+		}
+
+		.equal {
+			order: 2;
+		}
+
+		.to {
+			transition: $duration !important;
+			order: 3;
 		}
 	}
 
@@ -153,5 +197,32 @@ body {
 	}
 }
 
+.animate-right {
+	animation: reorderAnimationRight .7s ease-in-out reverse;
+}
+
+.animate-left {
+	animation: reorderAnimationLeft .7s ease-in-out reverse;
+}
+
+@keyframes reorderAnimationRight {
+	from {
+		transform: translateX(0);
+	}
+
+	to {
+		transform: translateX(60px);
+	}
+}
+
+@keyframes reorderAnimationLeft {
+	from {
+		transform: translateX(0);
+	}
+
+	to {
+		transform: translateX(-60px);
+	}
+}
 
 /* End Converter */
