--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,18 @@ body {
   animation: reorderAnimationLeft 0.7s ease-in-out reverse;
 }
 
+.rotate {
+  animation: reorderRotation 0.7s ease-in-out reverse;
+}
+
+@keyframes reorderRotation {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(-360deg);
+  }
+}
 @keyframes reorderAnimationRight {
   from {
     transform: translateX(0);
