--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,10 @@
 /* Start Variables */
 
 $main: #675aff;
-$second: #4838ff;
+$second: #7b2049;
+$three: #f73a99;
+$grad1: #361b82;
+$grad2: #141572;
 $duration: 0.4s;
 // $three: #e357ef;
 // $main-dark: #101928;
@@ -12,13 +15,13 @@ $duration: 0.4s;
 /* Start Global Rules */
 body {
 	font-family: 'Poppins', sans-serif;
-	background-color: $main;
 }
 
 * {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
+	scroll-behavior: smooth;
 }
 
 
@@ -28,18 +31,138 @@ body {
 
 /* End Components */
 /* Start Header */
+header {
+	min-width: 72px;
+
+	.navbar-toggler {
+		border-color: white;
+		color: white;
+
+		&:focus {
+			box-shadow: none;
+			border-color: $second;
+		}
+	}
+
+	.navbar-brand svg {
+		color: white;
+		font-size: 30px;
+
+		&:hover {
+			color: $three;
+		}
+	}
+
+	.nav-link {
+		color: white;
+		text-transform: capitalize;
+
+		&:hover,
+		&.active,
+		&:focus {
+			color: $three !important;
+		}
+	}
+}
 
 /* End Header */
+/* Start Land */
+.hero {
+	position: relative;
+	background-image: url('../images/hero.jpg');
+	background-size: cover;
+}
+
+.overlay {
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	z-index: 1;
+	padding: 0;
+
+	&::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-image: linear-gradient(135deg, #361b82e8 50%, #14157294 100%);
+	}
+}
+
+.hero-content {
+	position: relative;
+	z-index: 100;
+}
+
+.land {
+	height: calc(100vh - 72px);
+
+	.content {
+		p:first-child {
+			color: $three;
+		}
+
+		h1 {
+			font-size: 4rem;
+		}
+	}
+
+	.img-holder {
+		width: 60%;
+		border-radius: 10px;
+		padding: 20px;
+		background-color: white;
+		overflow: hidden;
+
+		img {
+			max-width: 100%;
+		}
+
+		p {
+			border-bottom: 1px solid #777;
+		}
+
+		.outline {
+			color: $second;
+		}
+	}
+}
+
+@media (max-width: 991px) {
+	header {
+		margin-bottom: 50px;
+	}
+
+	.land {
+		height: auto;
+
+		.img-holder {
+			width: 100%;
+		}
+	}
+
+	.overlay {
+		height: 100%;
+	}
+
+}
+
+/* End Land */
 /* Start Footer Section */
 
 /* End Footer Section */
 /* Start Converter */
 
 .converter {
+	background-color: $main;
 	width: 450px;
 	margin: auto;
 	position: relative;
-	background-color: white;
 	padding: 20px;
 	margin-top: 50px;
 	margin-bottom: 50px;
