--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,7 @@ header .nav-link:hover, header .nav-link.active, header .nav-link:focus {
 /* Start Instructions */
 .instructions {
   background-color: #110b37;
+  overflow: hidden;
 }
 .instructions .container .icon svg {
   font-size: 200px;
@@ -135,6 +136,11 @@ header .nav-link:hover, header .nav-link.active, header .nav-link:focus {
   border-radius: 10px;
   padding: 15px;
   margin-bottom: 20px;
+  transform: translateX(1000px);
+  transition: 0.7s;
+}
+.instructions .container .instruction.animate {
+  transform: translateX(0);
 }
 .instructions .container .instruction .number {
   position: relative;
@@ -179,6 +185,10 @@ header .nav-link:hover, header .nav-link.active, header .nav-link:focus {
   padding-bottom: 70px;
 }
 
+h1 {
+  color: #f73a99;
+}
+
 .converter {
   background-color: white;
   max-width: 450px;
@@ -189,11 +199,6 @@ header .nav-link:hover, header .nav-link.active, header .nav-link:focus {
 }
 .converter > * {
   margin-bottom: 50px;
-}
-.converter h3 {
-  font-weight: bold;
-  text-align: center;
-  font-size: 25px;
 }
 .converter label {
   margin-bottom: 10px;
@@ -389,6 +394,14 @@ header .nav-link:hover, header .nav-link.active, header .nav-link:focus {
   padding-top: 70px;
   padding-bottom: 70px;
   position: relative;
+  overflow: hidden;
+  left: 50%;
+  width: 0;
+  transition: 0.7s ease-in-out;
+}
+.features.animate {
+  left: 0;
+  width: 100%;
 }
 .features .overlay {
   height: 100%;
@@ -405,6 +418,11 @@ header .nav-link:hover, header .nav-link.active, header .nav-link:focus {
   padding-left: 30px;
   padding-right: 30px;
   margin-bottom: 40px;
+  opacity: 0;
+  transition: 0.7s;
+}
+.features .feature.animate {
+  opacity: 1;
 }
 .features .feature img {
   width: 64px;
